--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "url": "https://github.com/davidwt5/furigana-extension/issues"
   },
   "homepage": "https://github.com/davidwt5/furigana-extension#readme",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.14"
+  },
+  "dependencies": {
+    "node-fetch": "^3.1.0"
   }
 }
