--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A chrome extension that injects furigana into all kanji in a given HTML page",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,12 @@
     "url": "https://github.com/davidwt5/furigana-extension/issues"
   },
   "homepage": "https://github.com/davidwt5/furigana-extension#readme",
-  "type": "module",
   "devDependencies": {
+    "jest": "^27.3.1",
     "nodemon": "^2.0.14"
   },
   "dependencies": {
-    "node-fetch": "^3.1.0"
+    "@types/jest": "^27.0.2",
+    "node-fetch": "^2.6.6"
   }
 }
